# ETSIDict

./: CMakeLists.txt  ES_dict.h  LICENSE.md  ReadMe.md  ReadMe.txt  affentry.cpp  affentry.h  affixmgr.cpp  affixmgr.h  csutil.cpp  dictmgr.cpp  hashmgr.cpp  hashmgr.h  mock_file.h  myspell.cpp  myspell.h  spanish.cpp  spanish.h  suggestmgr.cpp  suggestmgr.h  unmunch.c
data/: CMakeLists.txt  dict_creator2.cpp
example/: CMakeLists.txt  example.cpp
example/lib/: ETSIDICT.h
lib/: ETSIDICT.h  ETSIDICT.lib  ETSIDICTD.lib
