MESSAGE(STATUS "ETSIDICT: Creando la librería y los ejemplos")


#SET(curdir ${CMAKE_CURRENT_SOURCE_DIR}/src)
#INCLUDE_DIRECTORIES(${curdir}/include) 


FILE(GLOB SOURCES *.cpp) 
FILE(GLOB HEADERS *.h)
SET(SOURCES ${SOURCES} ${child_sources})
SET(HEADERS ${HEADERS} ${child_headers})
SOURCE_GROUP("LIB_SRC" FILES ${SOURCES} ${HEADERS}) 

# ETSIDict library
ADD_LIBRARY(ETSIDICT STATIC ${SOURCES} ${HEADERS} )

set_target_properties(ETSIDICT  PROPERTIES OUTPUT_NAME ETSIDICT)
set_target_properties(ETSIDICT  PROPERTIES DEBUG_OUTPUT_NAME ETSIDICTD)
add_custom_command(TARGET ETSIDICT POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ETSIDICT>  ${CMAKE_CURRENT_SOURCE_DIR}/lib
)
FILE(READ "${CMAKE_CURRENT_SOURCE_DIR}/spanish.h" CONTENTS)
file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/lib/ETSIDICT.h" 
"
//Cabecera Publica de ETSIDICT. GENERADA AUTOMATICAMENTE
#ifdef _DEBUG
#pragma comment(lib,"lib/ETSIDICTD.lib")
#else
#pragma comment(lib,"lib/ETSIDICT.lib")
#endif

")
file(APPEND "${CMAKE_CURRENT_SOURCE_DIR}/lib/ETSIDICT.h" "${CONTENTS}")

ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(example)


